--- a/Kconfig
+++ b/Kconfig
@@ -8,45 +8,45 @@
 # @TAG(NICTA_BSD)
 #
 
-menuconfig LIB_SEL4_MUSLC_SYS
+menuconfig LIB_PLAYGROUND_SYS
     bool "Minimal muslc syscall"
     default y
     depends on LIB_SEL4 && LIB_MUSL_C && LIB_SEL4_UTILS && LIB_SEL4_VSPACE && LIB_CPIO
     help
-        Minimal muslc syscall implementation for seL4.
+        Fork of minimal muslc syscall implementation for seL4 modified to suit playgroundOS.
 
-config LIB_SEL4_MUSLC_SYS_MORECORE_BYTES
+config LIB_PLAYGROUND_BYTES
     int "Malloc limit"
     default 1048576
-    depends on LIB_SEL4_MUSLC_SYS
+    depends on LIB_PLAYGROUND_SYS
     help
         This value sets the number of bytes reserved for the region malloc
         allocates from. Note that you won't actually be able to allocate this
         entire amount because there is some bookkeeping overhead. This area is
         allocated statically.
 
-config LIB_SEL4_MUSLC_SYS_DEBUG_HALT
+config LIB_PLAYGROUND_SYS_DEBUG_HALT
     bool "Perform seL4_DebugHalt on _exit and _abort"
     default true
-    depends on LIB_SEL4_MUSLC_SYS
+    depends on LIB_PLAYGROUND_SYS
     help
         Controls whether or not a DebugHalt should be called to implement Exit
         style syscalls. This is useful if you have a single app and thread, but
         should be turned off if using multiple threads that may wish to exit
         independently of the whole system
 
-config LIB_SEL4_MUSLC_SYS_CPIO_FS
+config LIB_PLAYGROUND_SYS_CPIO_FS
     bool "Implementation of a simple file system using CPIO archives"
     default false
-    depends on LIB_SEL4_MUSLC_SYS
+    depends on LIB_PLAYGROUND_SYS
     help
         If this is enabled open and read syscalls will attempt to use the cpio archive
         _cpio_archive. This implements a basic read only POSIX interface to that file system
 
-config LIB_SEL4_MUSLC_SYS_ARCH_PUTCHAR_WEAK
+config LIB_PLAYGROUND_SYS_ARCH_PUTCHAR_WEAK
     bool "Make __arch_putchar a weak symbol"
     default n
-    depends on LIB_SEL4_MUSLC_SYS
+    depends on LIB_PLAYGROUND_SYS
     help
         This allows you to override __arch_putchar in another library or your
 	application.
